--- a/generated_translations_pre/npc/airports/izlude_txt.po
+++ b/generated_translations_pre/npc/airports/izlude_txt.po
@@ -15,78 +15,75 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-#,fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: c1fa5502eb08143a0e6e7862577fa57480919c0f"
-"Report-Msgid-Bugs-To: dev@herc.ws"
-"POT-Creation-Date: 2025-03-01 16:03:23+0700"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>"
-"Language-Team: LANGUAGE <LL@li.org>"
-"Language: "
-"MIME-Version: 1.0"
-"Content-Type: text/plain; charset=ISO-8859-1"
-"Content-Transfer-Encoding: 8bit"
+"Project-Id-Version: c1fa5502eb08143a0e6e7862577fa57480919c0fReport-Msgid-Bugs-To: dev@herc.wsPOT-Creation-Date: 2025-03-01 16:03:23+0700PO-Revision-Date: YEAR-MO-DA HO:MI+ZONELast-Translator: FULL NAME <EMAIL@ADDRESS>Language-Team: LANGUAGE <LL@li.org>Language: MIME-Version: 1.0Content-Type: text/plain; charset=ISO-8859-1Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: th\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
-
-#: npc/airports/izlude.txt
 # mes("[Airship Staff]");
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "[Airship Staff]"
-msgstr ""
+msgstr "[??????????????]"
 
-#: npc/airports/izlude.txt
 # mes("Welcome! Would you like "
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "Welcome! Would you like to board the Airship that departs on the flight wich stops in Juno and Rachel?"
-msgstr ""
+msgstr "????????????! ?????????????????????????????????????????????????????????????????????????"
 
-#: npc/airports/izlude.txt
 # if (select("Board the Airship to Juno Rachel.", "Cancel.") == 1) {
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "Board the Airship to Juno Rachel."
-msgstr ""
+msgstr "??????????????? Juno Rachel"
 
-#: npc/airports/izlude.txt
 # if (select("Board the Airship to Juno Rachel.", "Cancel.") == 1) {
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "Cancel."
-msgstr ""
+msgstr "??????."
 
-#: npc/airports/izlude.txt
 # mes("The boarding fee is "
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "The boarding fee is 1,200 zeny. However, this charged is waived if you use a Free Ticket for Airship. Now, would you still like to board?"
-msgstr ""
+msgstr "???????????????????????????? 1,200 Zeny ?????????????????????????????????????????????????????????????????????????? ????????????????????????????"
 
-#: npc/airports/izlude.txt
 # if (select("Yes", "No") == 1) {
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "Yes"
-msgstr ""
+msgstr "???"
 
-#: npc/airports/izlude.txt
 # if (select("Yes", "No") == 1) {
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "No"
-msgstr ""
+msgstr "??????"
 
-#: npc/airports/izlude.txt
 # mes("I'm sorry, but you don't "
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "I'm sorry, but you don't have 1,200 zeny to pay for the boarding fee."
-msgstr ""
+msgstr "???????? ??????????? 1,200 Zeny ??????????????????????????????????"
 
-#: npc/airports/izlude.txt
 # mes("Thank you and "
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "Thank you and please come again."
-msgstr ""
+msgstr "??????????????????????????"
 
-#: npc/airports/izlude.txt
 # mes("Have a good day~");
+#: npc/airports/izlude.txt
 msgctxt "::Airship_Staff_izlude"
 msgid "Have a good day~"
-msgstr ""
+msgstr "?????????????????????? ~"
