--- a/generated_translations_pre/npc/airports/einbroch_txt.po
+++ b/generated_translations_pre/npc/airports/einbroch_txt.po
@@ -15,156 +15,174 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-#,fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: c1fa5502eb08143a0e6e7862577fa57480919c0f\n"
 "Report-Msgid-Bugs-To: dev@herc.ws\n"
 "POT-Creation-Date: 2025-03-01 16:03:23+0700\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-03-01 22:40+0700\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: th\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
-
-#: npc/airports/einbroch.txt
 # mes("[Airport Staff]");
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
 msgid "[Airport Staff]"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Welcome to the\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
-msgid "Welcome to the\rEinbroch Airport,\rwhere we offer nonstop\rflights to the cities of\rJuno, Lighthalzen and Hugel."
+msgid ""
+"Welcome to the\rEinbroch Airport,\rwhere we offer nonstop\rflights to the "
+"cities of\rJuno, Lighthalzen and Hugel."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Board the Airship", "Cancel") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
 msgid "Board the Airship"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Board the Airship", "Cancel") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
 msgid "Cancel"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("The Airship boarding fee\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
-msgid "The Airship boarding fee\ris 1,200 zeny, but if you've\rgot a Free Ticket for Airship,\rthe fee will be waived. Will\ryou board the Airship?"
+msgid ""
+"The Airship boarding fee\ris 1,200 zeny, but if you've\rgot a Free Ticket "
+"for Airship,\rthe fee will be waived. Will\ryou board the Airship?"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Yes", "No") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
 msgid "Yes"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Yes", "No") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
 msgid "No"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("I'm sorry, but you don't\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
-msgid "I'm sorry, but you don't\rhave a Free Ticket for\rAirship and you don't have\renough zeny for boarding\rthe Airship. Remember, the\rboarding fee is 1,200 zeny."
+msgid ""
+"I'm sorry, but you don't\rhave a Free Ticket for\rAirship and you don't "
+"have\renough zeny for boarding\rthe Airship. Remember, the\rboarding fee is "
+"1,200 zeny."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Thank you and\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airport Staff#airport1a::airport1"
 msgid "Thank you and\rhave a nice day."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("[Arrival Staff]");
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "[Arrival Staff]"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Welcome to Einbroch Airport.");
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "Welcome to Einbroch Airport."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("If you are arriving from your\r"
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
-msgid "If you are arriving from your\rflight, let me guide you to the\rmain terminal. Otherwise, please board the Airship to depart to\rJuno, Lighthalzen and Hugel."
+msgid ""
+"If you are arriving from your\rflight, let me guide you to the\rmain "
+"terminal. Otherwise, please board the Airship to depart to\rJuno, "
+"Lighthalzen and Hugel."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Exit to main terminal.", "Cancel.") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "Exit to main terminal."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Exit to main terminal.", "Cancel.") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "Cancel."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Once you're in the main terminal, you will need to pay the fee again\r"
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
-msgid "Once you're in the main terminal, you will need to pay the fee again\rto board an Airship. You should\ronly exit if the city of Einbroch\ris your intended destination."
+msgid ""
+"Once you're in the main terminal, you will need to pay the fee again\rto "
+"board an Airship. You should\ronly exit if the city of Einbroch\ris your "
+"intended destination."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Proceed to the main terminal?");
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "Proceed to the main terminal?"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Yes", "No") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "Yes"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # if (select("Yes", "No") == 1) {
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
 msgid "No"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Alright, thank you\r"
+#: npc/airports/einbroch.txt
 msgctxt "Arrival Staff#airport2a::airport2"
-msgid "Alright, thank you\rfor your patronage\rand I hope you have\ra pleasant flight~"
+msgid ""
+"Alright, thank you\rfor your patronage\rand I hope you have\ra pleasant "
+"flight~"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("[Airship Staff]");
+#: npc/airports/einbroch.txt
 msgctxt "Airship Staff#ein01"
 msgid "[Airship Staff]"
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Welcome to the\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airship Staff#ein01"
 msgid "Welcome to the\rEinbroch Airport."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Please use this door to\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airship Staff#ein01"
-msgid "Please use this door to\rboard the Airship which stops\rover Juno, Lighthalzen and\rHugel in the Schwaltzvalt Republic."
+msgid ""
+"Please use this door to\rboard the Airship which stops\rover Juno, "
+"Lighthalzen and\rHugel in the Schwaltzvalt Republic."
 msgstr ""
 
-#: npc/airports/einbroch.txt
 # mes("Otherwise, if Einbroch is\r"
+#: npc/airports/einbroch.txt
 msgctxt "Airship Staff#ein01"
-msgid "Otherwise, if Einbroch is\ryour intended destination,\rplease head down the stairs\rand ask the Arrival Staff to lead\ryou to the main terminal. Thank\ryou, and enjoy your travels."
+msgid ""
+"Otherwise, if Einbroch is\ryour intended destination,\rplease head down the "
+"stairs\rand ask the Arrival Staff to lead\ryou to the main terminal. "
+"Thank\ryou, and enjoy your travels."
 msgstr ""
