--- a/generated_translations_pre/npc/airports/hugel_txt.po
+++ b/generated_translations_pre/npc/airports/hugel_txt.po
@@ -15,60 +15,60 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-#,fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: c1fa5502eb08143a0e6e7862577fa57480919c0f\n"
 "Report-Msgid-Bugs-To: dev@herc.ws\n"
 "POT-Creation-Date: 2025-03-01 16:03:23+0700\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2025-03-01 22:41+0700\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: th\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
-
-#: npc/airports/rachel.txt
 # mes("To use the airship, you are required to pay 1,200 zeny or a Free Airship Ticket.");
-msgctxt "toairplane#rachel"
-msgid "To use the airship, you are required to pay 1,200 zeny or a Free Airship Ticket."
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
+msgid ""
+"To use the airship, you are required to pay 1,200 zeny or a Free Airship "
+"Ticket."
 msgstr ""
 
-#: npc/airports/rachel.txt
 # mes("Would you like to use the service?");
-msgctxt "toairplane#rachel"
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
 msgid "Would you like to use the service?"
 msgstr ""
 
-#: npc/airports/rachel.txt
 # if (select("Yes", "No") == 1) {
-msgctxt "toairplane#rachel"
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
 msgid "Yes"
 msgstr ""
 
-#: npc/airports/rachel.txt
 # if (select("Yes", "No") == 1) {
-msgctxt "toairplane#rachel"
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
 msgid "No"
 msgstr ""
 
-#: npc/airports/rachel.txt
 # mes("I am sorry, but you do not have enough money.");
-msgctxt "toairplane#rachel"
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
 msgid "I am sorry, but you do not have enough money."
 msgstr ""
 
-#: npc/airports/rachel.txt
 # mes("Please remember, you are required to pay 1,200 zeny to use the service.");
-msgctxt "toairplane#rachel"
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
 msgid "Please remember, you are required to pay 1,200 zeny to use the service."
 msgstr ""
 
-#: npc/airports/rachel.txt
 # mes("Thank you, please come again.");
-msgctxt "toairplane#rachel"
+#: npc/airports/hugel.txt
+msgctxt "toairplane#hugel"
 msgid "Thank you, please come again."
 msgstr ""
